# apex-terminal

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  MASTER_PLAN.md  README.md  main.py  pyproject.toml  requirements.txt  start.bat  start.sh
.claude/: settings.json
apex/: __init__.py  config.py  logging_setup.py  models.py
apex/agents/: __init__.py  claude_client.py  eod_analyst.py  portfolio_reviewer.py  signal_evaluator.py
apex/backtest/: __init__.py  cache.py  custom_runner.py  dataset.py  engine.py  yahoo.py  (+1 more)
dashboard/: .env.example  README.md  auth.config.ts  auth.ts  middleware.ts  package-lock.json  package.json  tailwind.config.ts
docs/: CRYPTO_STATE_V1_REPORT.md  PROP_FIRM_PLAN.md  RUN_ON_VERCEL.md  STRATEGY_PROP_CHALLENGE.md
scripts/: dev_auction_flow.py  dev_auction_probe.py  dev_crypto_probe.py  dev_crypto_state.py  dev_crypto_v2.py  dev_crypto_v2_fidelity.py  dev_crypto_v3.py  dev_markov_scalp.py  dev_micro_probe.py  dev_scalp_lab.py  dev_strategy_lab.py  dev_v2_verify.py  seed_4h_resample.py  seed_binance_perp.py  seed_dukascopy_eurusd.py  seed_dukascopy_us500.py  seed_historical.py  setup_local_env.py
tests/: conftest.py  test_auction_flow.py  test_backtest.py  test_crypto_state.py  test_custom_backtest.py  test_engine_features.py  test_indicators.py  test_markov_regime.py  test_markov_scalper.py  test_markov_trend_swing.py  test_markov_trend_swing_plus.py  test_momentum_trend.py  test_onboarding_store.py  test_prop_guard.py  test_riptide_adaptive.py  test_riptide_pro.py  test_risk_engine.py  test_scalper_strategy.py  test_strategies.py
(+169 files in other folders)
